--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,7 +16,7 @@
     </div>
 <div class="container" id="contact">
     <div class="row">
-        <div class="col-md-5 contact">
+        <div class="col-md-5 col-lg-5 contact">
             <div class="contact-box-left mb-45">
                 <div class="contact-icon-left"><i class="ion ion-ios-location"></i></div>
                 <h4 class="">{% trans "Дополнительная информация" %}</h4>
@@ -39,9 +39,9 @@
                 {% endfor %}
             </div>
         </div>
-            <div class="col-md-7">
+            <div class="col-md-7 col-lg-7">
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2135.647170009473!2d30.477365811782654!3d50.46481172099501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce7874db2bc1%3A0xa02155f1f00d9a04!2z0LLRg9C70LjRhtGPINCc0LXQu9GM0L3QuNC60L7QstCwLCAxMiwg0JrQuNGX0LI!5e0!3m2!1sru!2sua!4v1498405926600"
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.7130154902875!2d30.523297315731117!3d50.44644597947481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce540e2b7079%3A0xc9c5c8341ef2900c!2z0LLRg9C70LjRhtGPINCX0LDQvdGM0LrQvtCy0LXRhtGM0LrQvtGXLCA1LzIsINCa0LjRl9Cy!5e0!3m2!1sru!2sua!4v1498770082366"
                             width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
                     <!-- END Contact FORM -->
                 </div>
