--- a/templates/home.html
+++ b/templates/home.html
@@ -139,7 +139,7 @@
                                     <img src="{{ parnter.img.url }}"/>
                                 {% endif %}
                                 <h3>
-                                    {{ partner.head }}
+                                    {{ parnter.head }}
                                 </h3>
                                 <div class="magic-line-partn mb-20"></div>
                                 <p>{{ parnter.text }}</p>
