--- a/static/static/css/custom.css
+++ b/static/static/css/custom.css
@@ -124,6 +124,12 @@ body{
     z-index: 999;
 }
 
+@media (max-width: 768px){
+    .fixed-menu{
+        top: 42px;
+    }
+}
+
 .fixed-menu{
     background-image: linear-gradient(to bottom, rgba(7, 106, 255, 0.8) 0,rgba(8, 100, 255, 1) 100%);
     width: 100%;
@@ -239,9 +245,9 @@ background-color: rgba(255, 255, 255, 0)!important;
         .bs-slider{
         overflow: hidden;
         max-height: 700px;
-        max-height: 110vh;
+        max-height: 100vh;
         position: relative;
-        background: #000000;
+        background: rgba(0,0,0, 0.1);
     }
     .panel-slide-poly{
         position: absolute;
@@ -272,9 +278,8 @@ background-color: rgba(255, 255, 255, 0)!important;
 @media (min-width: 1501px){
         .bs-slider{
         overflow: hidden;
-        max-height: 110vh;
+        max-height: 100vh;
         position: relative;
-        background: #000000;
     }
      .panel-slide-poly{
         position: absolute;
@@ -305,6 +310,7 @@ background-color: rgba(255, 255, 255, 0)!important;
     left: 0;
     width: 100%;
     height: 100%;
+    background: rgba(0,0,0, 0.1);
 }
 .bs-slider > .carousel-inner > .item > img,
 .bs-slider > .carousel-inner > .item > a > img {
