--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{ meta_title.title }}</title>
+    <meta name="keywords"  content="{{ meta_title.keywords }}">
+    <meta name="description" content="{{ meta.description }}">
+    <meta name="author" content="maxkaliberda1@gmail.com">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    {% if  meta_title.img.url %}
+        <link rel="shortcut icon" type="image/x-icon" href="{{ meta_title.img.url }}" />
+    {% endif %}
     <link rel="apple-touch-startup-image" href="splash-screen.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
