--- a/templates/base.html
+++ b/templates/base.html
@@ -200,7 +200,7 @@
                         <input class="input-sm form-full phone-nb-in" type="text" name="feed-link" value="{{ request.get_full_path }}" required>
                     </div>
 {#                    <div class="col-lg-12 text-center" style="display: inline">#}
-                    <input class="input-md phone-nb-in" type="text" name="feed-phone" placeholder="380" required>
+                    <input class="input-md phone-nb-in" type="text" name="feed-phone" placeholder="+380" required>
                     <button class="btn btn-subcat" type="submit" name="feed" id="cll">{% trans "Заказать звонок" %}</button>
 {#                    </div>#}
                 </form>
