--- a/templates/price.html
+++ b/templates/price.html
@@ -28,19 +28,19 @@
                     <div class="row text-center">
                         <div class="item-price  gen-price-it">
                             <h3 class="text-center">{{ price.head|safe }}</h3>
-                                <div class="row table-price col-md-10 col-md-offset-1">
-                                    <div class="table-pr-h col-md-6 text-center">
-                                        Мощность
+                                <div class="row table-price col-md-10 col-xs-10 col-sm-10 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+                                    <div class="table-pr-h col-md-6 col-xs-6 col-sm-6 text-center">
+                                        {% trans "Мощность" %}
                                     </div>
-                                    <div class="table-pr-h col-md-6 text-center">
-                                        Цена
+                                    <div class="table-pr-h col-md-6 col-xs-6 col-sm-6 text-center">
+                                        {% trans "Цена" %}
                                     </div>
                                     {% for price_it in price_it %}
                                         {% if price_it.price_key.id == price.id %}
-                                            <div class="table-pr-i col-md-6 text-center">
+                                            <div class="table-pr-i col-md-6 col-xs-6 col-sm-6 text-center">
                                                 {{ price_it.power }}
                                             </div>
-                                            <div class="table-pr-i col-md-6 text-center">
+                                            <div class="table-pr-i col-md-6 col-xs-6 col-sm-6 text-center">
                                                 {{ price_it.price }}
                                             </div>
                                         {% endif %}
@@ -49,32 +49,16 @@
                         </div>
                         <div class="item-price gen-price-it">
                             <h3 class="text-center">{% trans "Прибыль" %}</h3>
-                            <div class="row table-price col-md-10 col-md-offset-1">
+                            <div class="row table-price col-md-10 col-xs-10 col-sm-10 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
                                 {% for profit in profit %}
                                     {% if profit.price_key.id == price.id %}
-                                        <div class="table-pr-i col-md-12 text-center">
+                                        <div class="table-pr-i col-md-12 col-xs-12 col-sm-12 text-center">
                                             {{ profit.profit }}
                                         </div>
                                     {% endif %}
                                 {% endfor %}
                             </div>
-{#                                <div class="col-md-6">#}
-{#                                    <div class="table-pr-h col-md-12 text-center">#}
-{#                                            Среднегодовой доход#}
-{#                                    </div>#}
-{#                                    {% for profit in profit %}#}
-{#                                        {% if profit.price_key.id == price.id %}#}
-{#                                            <div class="table-pr-i col-md-12 text-center">#}
-{#                                                {{ profit.profit }}#}
-{#                                            </div>#}
-{#                                        {% endif %}#}
-{##}
-{#                                    {% endfor %}#}
-{##}
-{#                                </div>#}
-            {#                 <div class="magic-line-partn mb-20"></div>#}
                         </div>
-
                     </div>
                     {% endfor %}
                 {% endif %}
